--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -1,246 +1,247 @@
-
-@ARTICLE{Smith1989,
-   author = {{Smith}, B. A. and others},
-    title = "{Voyager 2 at Neptune: Imaging Science Results}",
-  journal = {Science},
-     year = 1989,
-   volume = 246,
-    pages = {1422-1449},
+@article{Porco2003,
+title={Cassini Imaging of Jupiter’s Atmosphere, Satellites, and Rings},
+volume={299},
+url={http://dx.doi.org/10.1126/science.1079462},
+DOI={10.1126/science.1079462},
+number={5612},
+journal={Science},
+publisher={American Association for the Advancement of Science (AAAS)},
+author={Porco, C. C.},
+year={2003},
+month={Mar},
+pages={1541–1547}
 }
 
-@ARTICLE{Sheppard2003,
-   author = {{Sheppard}, S.~S. and {Jewitt}, D.~C.},
-    title = "{An abundant population of small irregular satellites around Jupiter}",
-  journal = {Nature},
-     year = 2003,
-    month = may,
-   volume = 423,
-    pages = {261},
-}
-
-@ARTICLE{Desmars2013,
-   author = {{Desmars}, J. and others},
-    title = "{Phoebe’s orbit from ground-based and space-based observations}",
-  journal = {Astronomy and Astrophysics},
-     year = 2013,
-    month = may,
-   volume = 553,
-}
-
-@ARTICLE{Clark2005,
-   author = {{Clark}, R.~N. and others},
-    title = "{Compositional maps of Saturn’s moon Phoebe from imaging spectroscopy}",
-  journal = {Nature},
-     year = 2005,
-    month = may,
-   volume = 435,
-    pages = {66},
+@article{Nesvorny2003,
+title={Orbital and Collisional Evolution of the Irregular Satellites},
+volume={126},
+url={http://dx.doi.org/10.1086/375461},
+DOI={10.1086/375461},
+number={1},
+journal={AJ},
+publisher={IOP Publishing},
+author={Nesvorný, David and Alvarellos, Jose L. A. and Dones, Luke and Levison, Harold F.},
+year={2003},
+month={Jul},
+pages={398–429}
 }
 
 @article{Grav2003,
-title = "Photometric survey of the irregular satellites ",
-journal = "Icarus ",
-volume = "166",
-number = "1",
-pages = "33 - 45",
-year = "2003",
-note = "",
-issn = "0019-1035",
-doi = "http://dx.doi.org/10.1016/j.icarus.2003.07.005",
-url = "http://www.sciencedirect.com/science/article/pii/S0019103503002318",
-author = "Tommy Grav and Matthew J. Holman and Brett J. Gladman and Kaare Aksnes",
-keywords = "Photometry",
-keywords = "Satellite of Jupiter",
-keywords = "Satellite of Saturn",
-keywords = "Satellite of Uranus",
-keywords = "Surfacessatellite "
+title={Photometric survey of the irregular satellites},
+volume={166},
+url={http://dx.doi.org/10.1016/j.icarus.2003.07.005},
+DOI={10.1016/j.icarus.2003.07.005},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Grav, Tommy and Holman, Matthew J. and Gladman, Brett J. and Aksnes, Kaare},
+year={2003},
+month={Nov},
+pages={33–45}
 }
 
-@ARTICLE{Grav2007,
-title = "A deeper look at the colors of the saturnian irregular satellites ",
-journal = "Icarus ",
-volume = "191",
-number = "1",
-pages = "267 - 285",
-year = "2007",
-note = "",
-issn = "0019-1035",
-doi = "http://dx.doi.org/10.1016/j.icarus.2007.04.020",
-url = "http://www.sciencedirect.com/science/article/pii/S0019103507001868",
-author = "Tommy Grav and James Bauer",
-keywords = "Irregular satellites",
-keywords = "Photometry",
-keywords = "Satellitessurfaces",
-keywords = "Saturnsatellites "
+@article{Nesvorny2004,
+title={Collisional Origin of Families of Irregular Satellites},
+volume={127},
+url={http://dx.doi.org/10.1086/382099},
+DOI={10.1086/382099},
+number={3},
+journal={AJ},
+publisher={IOP Publishing},
+author={Nesvorný, David and Beaugé, Cristian and Dones, Luke},
+year={2004},
+month={Mar},
+pages={1768–1783}
 }
 
-@Article{Jacobson2012,
-author = {{Jacobson}, R. and others},
-title = {IRREGULAR SATELLITES OF THE OUTER PLANETS: ORBITAL UNCERTAINTIES
-AND ASTROMETRIC RECOVERIES IN 2009–2011},
-journal = {The Astronomical Journal},
-year = {2012},
-volume = {144},
-pages = {8 pgs},
+@article{Gomes2005,
+title={Origin of the cataclysmic Late Heavy Bombardment period of the terrestrial planets},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03676},
+DOI={10.1038/nature03676},
+number={7041},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Gomes, R. and Levison, H. F. and Tsiganis, K. and Morbidelli, A.},
+year={2005},
+month={May},
+pages={466–469}
 }
 
-@Article{Porco2003,
-author = {{Porco}, C. and others},
-title = {Cassini imaging of Jupiter's atmosphere, satellites, and rings},
-journal = {Science},
-year = {2003},
-volume = {299},
-number = {5612},
-pages = {1541-1547},
+@article{Morbidelli2005,
+title={Chaotic capture of Jupiter’s Trojan asteroids in the early Solar System},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03540},
+DOI={10.1038/nature03540},
+number={7041},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Morbidelli, A. and Levison, H. F. and Tsiganis, K. and Gomes, R.},
+year={2005},
+month={May},
+pages={462–465}
 }
 
-@Article{Lindegren1977,
-author = {{Lindegren}, L.},
-title = {Meridian observations of planets with a photoelectric mustislit micrometer},
-journal = {Astronomy and Astrophysics},
-year = {1977},
-volume = {57},
-pages = {55-72},
+@article{Tsiganis2005,
+title={Origin of the orbital architecture of the giant planets of the Solar System},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03539},
+DOI={10.1038/nature03539},
+number={7041},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Tsiganis, K. and Gomes, R. and Morbidelli, A. and Levison, H. F.},
+year={2005},
+month={May},
+pages={459–461}
 }
 
-@Article{Emelyanov2008,
-author = {{Emelyanov}, N. V. and {Arlot}, J.-E.},
-title = {The natural satellites ephemerides facility MULTI-SAT},
-journal = {Astronomy and Astrophysics},
-year = {2008},
-volume = {487},
-pages = {759–765},
+@InProceedings{Sheppard2005,
+title={Outer irregular satellites of the planets and their relationship with asteroids, comets and Kuiper Belt objects},
+volume={1},
+url={http://dx.doi.org/10.1017/S1743921305006824},
+DOI={10.1017/s1743921305006824},
+number={S229},
+journal={Proceedings of the International Astronomical Union},
+publisher={Cambridge University Press (CUP)},
+author={Sheppard, Scott S.},
+year={2005},
+month={Aug},
+pages={319}
 }
 
-@article{Thomas2010,
-title = "Sizes, shapes, and derived properties of the saturnian satellites after the Cassini nominal mission ",
-journal = "Icarus ",
-volume = "208",
-number = "1",
-pages = "395 - 401",
-year = "2010",
-note = "",
-issn = "0019-1035",
-doi = "http://dx.doi.org/10.1016/j.icarus.2010.01.025",
-url = "http://www.sciencedirect.com/science/article/pii/S0019103510000448",
-author = "P.C. {Thomas}",
-keywords = "Saturn, Satellites",
-keywords = "Geophysics",
-keywords = "Geological processes "
+@article{Clark2005,
+title={Compositional maps of Saturn’s moon Phoebe from imaging spectroscopy},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03558},
+DOI={10.1038/nature03558},
+number={7038},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Clark, Roger N. and Brown, Robert H. and Jaumann, Ralf and Cruikshank, Dale P. and Nelson, Robert M. and Buratti, Bonnie J. and McCord, Thomas B. and Lunine, J. and Baines, K. H. and Bellucci, G. and et al.},
+year={2005},
+month={May},
+pages={66–69}
 }
 
-@article {Thomas1991,
-author = {{Thomas}, Peter and {Veverka}, Joseph and {Helfenstein}, Paul},
-title = {Voyager observations of Nereid},
-journal = {Journal of Geophysical Research: Space Physics},
-volume = {96},
-number = {S01},
-issn = {2156-2202},
-url = {http://dx.doi.org/10.1029/91JA01735},
-doi = {10.1029/91JA01735},
-pages = {19253--19259},
-year = {1991},
+@article{Grav2007,
+title={A deeper look at the colors of the saturnian irregular satellites},
+volume={191},
+url={http://dx.doi.org/10.1016/j.icarus.2007.04.020},
+DOI={10.1016/j.icarus.2007.04.020},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Grav, T and Bauer, J},
+year={2007},
+month={Nov},
+pages={267–285}
 }
 
-@article {Braga-Ribas2014,
-author = {{Braga-Ribas}, Felipe and others},
-title = {A ring system detected around the Centaur (10199) Chariklo},
-journal = {Nature},
-number = {508},
-pages = {72},
-year = {2014},
+@article{Nesvorny2007,
+title={Capture of Irregular Satellites during Planetary Encounters},
+volume={133},
+url={http://dx.doi.org/10.1086/512850},
+DOI={10.1086/512850},
+number={5},
+journal={AJ},
+publisher={IOP Publishing},
+author={Nesvorný, David and Vokrouhlický, David and Morbidelli, Alessandro},
+year={2007},
+month={Mar},
+pages={1962–1976}
 }
 
-@Article{deBruijne2012,
-author = {{de Bruijne}, J. H. J.},
-title = {Science performance of Gaia, ESA’s space-astrometry mission},
-journal = {Ap\&SS},
-year = {2012},
-volume = {341},
-pages = {31},
+@article{Sicardy2011,
+title={A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation},
+volume={478},
+url={http://dx.doi.org/10.1038/nature10550},
+DOI={10.1038/nature10550},
+number={7370},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Sicardy, B. and Ortiz, J. L. and Assafin, M. and Jehin, E. and Maury, A. and Lellouch, E. and Hutton, R. Gil and Braga-Ribas, F. and Colas, F. and Hestroffer, D. and et al.},
+year={2011},
+month={Oct},
+pages={493–496}
 }
 
-
-@INPROCEEDINGS{Jones2000,
-   author = {{Jones}, H. and {Valdes}, F.},
-    title = "{Handling ESO WFI Data with IRAF}",
-booktitle = {"Handling ESO WFI Data With IRAF", ESO Document number 2p2-MAN-ESO-22200-00002},
-     year = 2000,
+@article{Ortiz2012,
+title={Albedo and atmospheric constraints of dwarf planet Makemake from a stellar occultation},
+volume={491},
+url={http://dx.doi.org/10.1038/nature11597},
+DOI={10.1038/nature11597},
+number={7425},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Ortiz, J. L. and Sicardy, B. and Braga-Ribas, F. and Alvarez-Candal, A. and Lellouch, E. and Duffard, R. and Pinilla-Alonso, N. and Ivanov, V. D. and Littlefair, S. P. and Camargo, J. I. B. and et al.},
+year={2012},
+month={Nov},
+pages={566–569}
 }
 
-@INPROCEEDINGS{Valdes1998,
-   author = {{Valdes}, F. G.},
-    title = "{Handling ESO WFI Data with IRAF}",
-booktitle = {"The IRAF Mosaic Data Reduction Package" in Astronomical Data Analysis Software and Systems VII, A.S.P. Conference Ser., Vol 145, eds R. Albrecht, R. N. Hook and H. A. Bushouse, 53},
-     year = 1998,
+@article{Zacharias2013,
+title={THE FOURTH US NAVAL OBSERVATORY CCD ASTROGRAPH CATALOG (UCAC4)},
+volume={145},
+url={http://dx.doi.org/10.1088/0004-6256/145/2/44},
+DOI={10.1088/0004-6256/145/2/44},
+number={2},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Zacharias, N. and Finch, C. T. and Girard, T. M. and Henden, A. and Bartlett, J. L. and Monet, D. G. and Zacharias, M. I.},
+year={2013},
+month={Jan},
+pages={44}
 }
 
-@ARTICLE{2010A&A...515A..32A,
-   author = {{Assafin}, M. and {Camargo}, J.~I.~B. and {Vieira Martins}, R. and 
-	{Andrei}, A.~H. and {Sicardy}, B. and {Young}, L. and {da Silva Neto}, D.~N. and 
-	{Braga-Ribas}, F.},
-    title = "{Precise predictions of stellar occultations by Pluto, Charon, Nix, and Hydra for 2008-2015}",
-  journal = {Astronomy and Astrophysics},
- keywords = {astrometry, occultations, planets and satellites: individual: Pluto, planets and satellites: individual: Charon, planets and satellites: individual: Nix, planets and satellites: individual: Hydra},
-     year = 2010,
-    month = jun,
-   volume = 515,
-      eid = {A32},
-    pages = {A32},
-      doi = {10.1051/0004-6361/200913690},
-   adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...515A..32A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{Camargo2013,
+title={Candidate stellar occultations by Centaurs and trans-Neptunian objects up to 2014},
+volume={561},
+url={http://dx.doi.org/10.1051/0004-6361/201322579},
+DOI={10.1051/0004-6361/201322579},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Camargo, J. I. B. and Vieira-Martins, R. and Assafin, M. and Braga-Ribas, F. and Sicardy, B. and Desmars, J. and Andrei, A. H. and Benedetti-Rossi, G. and Dias-Oliveira, A.},
+year={2013},
+month={Dec},
+pages={A37}
 }
 
-@ARTICLE{2012A&A...541A.142A,
-   author = {{Assafin}, M. and {Camargo}, J.~I.~B. and {Vieira Martins}, R. and 
-	{Braga-Ribas}, F. and {Sicardy}, B. and {Andrei}, A.~H. and 
-	{da Silva Neto}, D.~N.},
-    title = "{Candidate stellar occultations by large trans-Neptunian objects up to 2015}",
-  journal = {Astronomy and Astrophysics},
-archivePrefix = "arXiv",
-   eprint = {1204.4234},
- primaryClass = "astro-ph.EP",
- keywords = {astrometry, occultations, Kuiper belt: general},
-     year = 2012,
-    month = may,
-   volume = 541,
-      eid = {A142},
-    pages = {A142},
-      doi = {10.1051/0004-6361/201118349},
-   adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...541A.142A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{Braga-Ribas2014,
+title={A ring system detected around the Centaur (10199) Chariklo},
+volume={508},
+url={http://dx.doi.org/10.1038/nature13155},
+DOI={10.1038/nature13155},
+number={7494},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and Snodgrass, C. and Roques, F. and Vieira-Martins, R. and Camargo, J. I. B. and Assafin, M. and Duffard, R. and Jehin, E. and et al.},
+year={2014},
+month={Mar},
+pages={72–75}
 }
 
-@INPROCEEDINGS{2011gfun.conf...85A,
-   author = {{Assafin}, M. and {Vieira Martins}, R. and {Camargo}, J.~I.~B. and 
-	{Andrei}, A.~H. and {Da Silva Neto}, D.~N. and {Braga-Ribas}, F.
-	},
-    title = "{PRAIA - Platform for Reduction of Astronomical Images Automatically}",
-booktitle = {Gaia follow-up network for the solar system objects : Gaia FUN-SSO workshop proceedings, held at IMCCE -Paris Observatory, France, November 29 - December 1, 2010. ISBN 2-910015-63-7},
-     year = 2011,
-   editor = {{Tanga}, P. and {Thuillot}, W.},
-    month = jun,
-    pages = {85-88},
-   adsurl = {http://adsabs.harvard.edu/abs/2011gfun.conf...85A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{Nesvorny2014,
+title={CAPTURE OF IRREGULAR SATELLITES AT JUPITER},
+volume={784},
+url={http://dx.doi.org/10.1088/0004-637X/784/1/22},
+DOI={10.1088/0004-637x/784/1/22},
+number={1},
+journal={ApJ},
+publisher={IOP Publishing},
+author={Nesvorný, David and Vokrouhlický, David and Deienno, Rogerio},
+year={2014},
+month={Feb},
+pages={22}
 }
 
-@ARTICLE{2013AJ....145...44Z,
-   author = {{Zacharias}, N. and {Finch}, C.~T. and {Girard}, T.~M. and {Henden}, A. and 
-	{Bartlett}, J.~L. and {Monet}, D.~G. and {Zacharias}, M.~I.},
-    title = "{The Fourth US Naval Observatory CCD Astrograph Catalog (UCAC4)}",
-  journal = {\aj},
-archivePrefix = "arXiv",
-   eprint = {1212.6182},
- primaryClass = "astro-ph.IM",
- keywords = {astrometry, catalogs, reference systems, stars: kinematics and dynamics},
-     year = 2013,
-    month = feb,
-   volume = 145,
-      eid = {44},
-    pages = {44},
-      doi = {10.1088/0004-6256/145/2/44},
-   adsurl = {http://adsabs.harvard.edu/abs/2013AJ....145...44Z},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{GomesJunior2015,
+title={Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations},
+url={http://dx.doi.org/10.1051/0004-6361/201526273},
+DOI={10.1051/0004-6361/201526273},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={A. R. Gomes-Júnior and M. Assafin and R. Vieira-Martins and J.-E. Arlot and J. I. B. Camargo and F. Braga-Ribas and D. N. da Silva Neto and A. H. Andrei and A. Dias-Oliveira and B. E. Morgado and et al.},
+year={2015},
+month={Jun}
 }
