--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -81,10 +81,10 @@
 %          \inst{6},
 %          A. H. Andrei
 %          \inst{1,2} \fnmsep\thanks{Affiliated researcher at Observatoire de Paris/SYRTE, 77 Avenue Denfert Rochereau, 75014 Paris, France},
-          A. Dias-Oliveira
-          \inst{2},
           B. E. Morgado
           \inst{1},
+          A. Dias-Oliveira
+          \inst{2},
           G. Benedetti-Rossi
           \inst{2},
 %          Y. Duchemin
@@ -157,7 +157,7 @@ The region of origin of these object is not well known, \cite{Grav2003} and \cit
 
 In this work, we study these objects as possible representatives of the small TNOs population. TNOs are objects that due to their distance may be highly preserved having their properties similar to those they had when they were formed then providing history and evolution of the outer solar system \citep{Camargo2013}. Due to their distance, the smaller objects from this region are more difficult to observe and study.
 
-In the intent to obtain their physical parameters (size, shape, albedo, density, etc) and help identify their origin locations, we will make use of the stellar occultation technique. This technique is the best one to obtain the physical parameters of the solar system objects from ground-based observations providing more accurate results than other techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}.
+In the intent to obtain their physical parameters (size, shape, albedo, density, etc) and help identify their origin locations, we will make use of the stellar occultation technique. This technique is the best one to obtain the physical parameters of the solar system objects from ground-based observations providing more accurate results than other groud-based techniques \citep{Sicardy2011, Ortiz2012, Braga-Ribas2014}.
 
 Since their sizes are very small (see table \ref{}), predict the exact location and instant where the shadow will cross the Earth demands a good precision. For instance, the bigger irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of 40 mas, must have an error smaller than its size for being observable. For the other objects, smaller or farther than Himalia, the situation is more difficult.
 
