--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -184,6 +184,7 @@ We present in this paper the stellar occultation predictions for the 7 major irr
 
 \section{Correction of the ephemeris} \label{Sec: Offset}
 
+\cite{GomesJunior2015} showed from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) that the orbits of the irregular satellites from the the giant planets have systematic errors. The offsets of the observations relative to the ephemeris could be up to 200 mas for some satellites. These differences could be associated with errors in their orbital elements.
 
 \section{Prediction of occultations} \label{Sec: predictions}
 
